# ocaml_dspy

./: README.md  dune  dune-project  ocaml_dspy.opam  ppx_ocaml_dspy.opam
.github/workflows/: ocamldoc.yml
doc/: dune  index.mld
ppx/: dune  ppx_ocaml_dspy.ml
src/: chain_of_thought.ml  chain_of_thought.mli  chat_adapter.ml  chat_adapter.mli  dspy_error.ml  dspy_error.mli  dune  lm.ml  lm.mli  lm_request.ml  lm_request.mli  lm_response.ml  lm_response.mli  ocaml_dspy.ml  ocaml_dspy.mli  openai_chat_lm.ml  openai_chat_lm.mli  predict.ml  predict.mli  prediction.ml  prediction.mli  signature.ml  signature.mli  type.ml  type.mli  values.ml  values.mli
test/: dune  test_core_ocaml_dspy.ml  test_exceptions_ocaml_dspy.ml  test_live_openai_chat_lm.ml  test_mock_ocaml_dspy.ml  test_ppx_ocaml_dspy_errors.ml  test_predict_suite.ml
